<package format="2">
  <name>rerun_ros_bridge</name>

  <version>1.0.0</version>

  <description>
  Repository that enables visualization of ros data on Rerun
  </description>

  <maintainer email="niccolo.gazzanelli@iit.it">Niccolò Gazzanelli</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  
</package>
